Fix align

--- a/Maintenance/1.0.0/css/Diagnostic.css
+++ b/Maintenance/1.0.0/css/Diagnostic.css
@@ -16,6 +16,7 @@
 }
 
 .Diagnostics__body {
+   text-align     : left;
    width          : 1024px;
    height         : 100%;
    -moz-box-sizing: border-box;
